k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lets-stock-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: lets-stock-frontend
  ports:
  - port: 80
    targetPort: 80
